[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menu/hide.gd" type="Script" id=2]
[ext_resource path="res://Textures/Menu/implant_screen_back.png" type="Texture" id=3]
[ext_resource path="res://Textures/Menu/implant_character.png" type="Texture" id=4]
[ext_resource path="res://Textures/Menu/Empty_Slot.png" type="Texture" id=5]
[ext_resource path="res://Sfx/UI/implant_unequip.wav" type="AudioStream" id=6]
[ext_resource path="res://Sfx/UI/Implant_Equip.wav" type="AudioStream" id=7]
[ext_resource path="res://MOD_CONTENT/CruS Mod Base/scripts/Implant_Menu_Ingame.gd" type="Script" id=8]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( -31.0443, -31.9391, 191.044, 191.687 )
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
modulate_color = Color( 1, 1, 1, 0.803922 )

[sub_resource type="AudioStreamRandomPitch" id=2]
audio_stream = ExtResource( 7 )

[sub_resource type="AudioStreamRandomPitch" id=3]
audio_stream = ExtResource( 6 )

[node name="Implant_Menu" type="PanelContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.9
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character_Container" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Equip" type="AudioStreamPlayer" parent="Character_Container"]
stream = SubResource( 2 )
volume_db = -5.557

[node name="Unequip" type="AudioStreamPlayer" parent="Character_Container"]
stream = SubResource( 3 )
volume_db = -0.784

[node name="Equip_Grid" type="GridContainer" parent="Character_Container"]
margin_right = 638.0
margin_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Character_Container"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="Head_Button" type="TextureButton" parent="Character_Container/TextureRect"]
margin_left = 7.0
margin_top = 7.0
margin_right = 7.0
margin_bottom = 727.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Torso_Button" type="TextureButton" parent="Character_Container/TextureRect"]
margin_left = 7.0
margin_top = 7.0
margin_right = 7.0
margin_bottom = 727.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leg_Button" type="TextureButton" parent="Character_Container/TextureRect"]
margin_left = 7.0
margin_top = 7.0
margin_right = 7.0
margin_bottom = 727.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arm_Button" type="TextureButton" parent="Character_Container/TextureRect"]
margin_left = 7.0
margin_top = 7.0
margin_right = 7.0
margin_bottom = 727.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="Character_Container"]
margin_left = 8.0
margin_right = 208.0
margin_bottom = 70.0
window_title = ""
dialog_text = "Do you want to purchase X?"

[connection signal="confirmed" from="Character_Container/ConfirmationDialog" to="Character_Container" method="_on_ConfirmationDialog_confirmed"]
